syntax = "proto3";
package jwt;
option go_package = "./jwt_pb";

enum EncryptionAlgorithm {
    UNKNOWN = 0;
    HS256 = 1;
	HS384 = 2;
	HS512 = 3;
    RS256 = 4;
	RS384 = 5;
	RS512 = 6;
	ES256 = 7;
	ES384 = 8;
	ES512 = 9;
    EdDSA = 10;
}

message SignerMeta {
    EncryptionAlgorithm algo = 1;
    string iss =2;       
	int64 defaultTTL = 3;   //单位s
	int64 defaultEffectiveInterval = 4; //单位s
	string jtiGen = 5;                  
}

message VerifierMeta {
    EncryptionAlgorithm algo = 1;
    string defaultAUD =2;       
	repeated string defaultISSRange = 3;   
}

message Token {
    string AccessToken = 1;
    string RefreshToken = 2;
}
message ResponseStatus {
    enum Stat {
        SUCCEED = 0;
        FAILED = 1;
    }
    Stat status = 1;
    string message = 2;
}
